<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Hang-out</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="title_activity_main">Hang-out</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_registration">RegistrationActivity</string>
    <string name="preferences">Preferences</string>
    <string name="search">Search</string>
    <string name="exit">Exit</string>
    <string name="hang_new">New</string>
    <string name="title_activity_friends">My Friends</string>
    <string name="title_all_friends">All Friends</string>
    <string name="my_friends">My Friends</string>
    <string name="sorry_no_items_to_display">No friends added yet</string>
    <string name="sorry_no_hangout_to_display">No Related Hang Out yet</string>
    <string name="title_activity_friend">My Friends</string>
    <string name="title_activity_new_hang_out">New Hang-Out</string>
    <string name="title_activity_friend_list">Add Friends to Hag-out</string>
    <string name="title_activity_set_time">SetTimeActivity</string>
    <string name="edit_my_time">Free time</string>
    

</resources>